# Sparvel

./: README.md  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/: CMakeLists.txt
app/src/androidTest/java/com/sidukov/sparvel/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioFileManager.cpp  CMakeLists.txt  SparvelAudioPlayer.cpp  native-lib.cpp
app/src/main/cpp/include/: AudioFileManager.h  AudioPlayer.h  SparvelAudioPlayer.h
app/src/main/java/com/sidukov/sparvel/: MainActivity.kt  MainViewModel.kt  SparvelApplication.kt
app/src/main/java/com/sidukov/sparvel/core/functionality/: BaseViewModel.kt  MusicDataProvider.kt  Navigation.kt  SharedPrefsManager.kt  Utils.kt
app/src/main/java/com/sidukov/sparvel/core/model/: MusicCollection.kt  Track.kt  TrackItem.kt
app/src/main/java/com/sidukov/sparvel/core/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/sidukov/sparvel/core/ui/: AddPlaylistItem.kt  AsyncOrPlaceholderImage.kt  CollectionItem.kt  CollectionScreen.kt  CollectionSection.kt  Common.kt  HQImageOrPlaceholder.kt  HomeMenuPanel.kt  ImageOrPlaceholder.kt  SearchBar.kt  Toolbar.kt  TrackList.kt
app/src/main/java/com/sidukov/sparvel/core/widgets/: AddPlaylistItem.kt  BorderlessImage.kt  BoxedImage.kt  CollectionItem.kt  CollectionScreen.kt  CollectionSection.kt  HQImageOrPlaceholder.kt  HomeMenuPanel.kt  ImageOrPlaceholder.kt  MenuSearchPanel.kt  PlayButton.kt  SearchBar.kt  SparvelImage.kt  Toolbar.kt  TrackList.kt
app/src/main/java/com/sidukov/sparvel/di/: AppComponent.kt  AppModule.kt  Injector.kt  ResourceModule.kt  StorageModule.kt  ViewModelModule.kt  ViewModelProviders.kt
app/src/main/java/com/sidukov/sparvel/features/album/: AlbumScreen.kt  AlbumsScreen.kt
app/src/main/java/com/sidukov/sparvel/features/equalizer/: EqualizerScreen.kt
app/src/main/res/drawable/: anim_play_pause.xml  ic_arrow.xml  ic_crescent.xml  ic_equalizer.xml  ic_globe.xml  ic_info.xml  ic_melody.xml  ic_menu.xml  ic_player_arrow.xml  ic_playlist.xml  ic_plus.xml  ic_repeat.xml  ic_search.xml  ic_sparvel_logo.xml  ic_three_dots.xml
app/src/main/res/raw/: anim_audiowave.json  anim_play_pause.json
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sidukov/sparvel/: ExampleUnitTest.kt
audiomanager/: .gitignore  build.gradle
audiomanager/src/androidTest/java/com/sidukov/audiomanager/: ExampleInstrumentedTest.kt
audiomanager/src/main/cpp/: CMakeLists.txt  audio_engine.cpp
audiomanager/src/main/cpp/decoder/: DecodingUtilities.cpp  DecodingUtilities.h  FFmpegDecoder.cpp  FFmpegDecoder.h  ffmpeg_headers_wrapper.h
audiomanager/src/main/cpp/extractor/: DecodingUtilities.cpp  DecodingUtilities.h  ffmpeg_headers_wrapper.h
audiomanager/src/main/cpp/player/: AudioPlayer.cpp  AudioPlayer.h
audiomanager/src/main/cpp/utils/: AudioBuffer.cpp  AudioBuffer.h  Helpers.h  Logger.h
audiomanager/src/main/java/com/sidukov/audiomanager/: AudioManager.kt
audiomanager/src/test/java/com/sidukov/audiomanager/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
